@@ -1,4 +1,9 @@
-$Id: CHANGES,v 1.2 1997/10/16 22:18:53 lf Exp $
+$Id: CHANGES,v 1.3 1997/10/19 18:39:13 lf Exp $
+
+10/19/97	Removed backwards compatibility code in recv.c.
+		IPV6_HOPLIMIT support is now assumed to exist.
+
+10/19/97	Fixed alignment problems in recv.c and send.c.
 
 10/16/97	the Makefile install target now uses mkinstalldirs.
 
